# senpai.py

./: .env  .env.debug  LICENSE  Procfile  cb.py  config.json  config.py  config1.py  keep_alive.py  main.py  package-lock.json  pyproject.toml  requirements.txt  senpai.py  smusic.json  util.py
cogs/: Music.py  ReadableTime.py  api.py  cb.py  default.py  errors.py  events.py  fun,.py  fun.py  image.py  info.py  owner.py  util.py
cogs/data/: data.py
non-commands/: Music.py  help.py  music.py  owner.py  sub.py
utils/: dataIO.py  default.py  http.py
