[tool.poetry]
name = "repl_python3_beta_StrongSpottedDemoware"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^2.0.0"
discord = "^1.0.1"
jishaku = "^1.19.1"
cleverbotfree = "^1.2.4"
async = "^0.6.2"
"discord.py" = "1.4.2"
aiosqlite = "^0.15.0"
psutil = "^5.7.2"
flask = "^1.1.2"
pendulum = "^2.1.2"
pyfiglet = "^0.8.post1"
PyNaCl = "^1.4.0"
youtube_dl = "^2020.9.20"
aiohttp = "^3.6.2"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
